@@ -53,4 +53,18 @@
     <ant antfile="ant/ant.xml" target="callback" inheritAll="false" />
   </target>
 
+  <target name="testInherit">
+    <ant antfile="ant/references.xml" inheritAll="true" target="dummy" />
+  </target>
+
+  <target name="testNoInherit">
+    <ant antfile="ant/references.xml" inheritAll="false" target="dummy" />
+  </target>
+
+  <target name="testRename">
+    <ant antfile="ant/references.xml" inheritAll="false" target="dummy">
+      <reference refid="path" torefid="newpath" />
+    </ant>
+  </target>
+
 </project>
